--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "nodemon": "^2.0.2",
     "path": "^0.12.7",
     "promise-mysql": "^3.2.1"
   }
